@@ -5,7 +5,6 @@
  - when we can use pango 1.6, use the built-in ellipsizing
  - audit event emitting frequency
  - use less ArrayLists
- - fix lock/unlock menuitems
 
 potential new features
  - restore size/position on de-iconify?
